@@ -212,6 +212,25 @@ void result_item_save_current_line(result_item_t * item, poldiff_form_e form, gi
  */
 gint result_item_get_current_line(result_item_t * item, poldiff_form_e form);
 
+/**
+ * Callback invoked by results_t whenever a inlink-link tag was
+ * clicked.  This will pop a menu that will let the user jump to the
+ * exact line in the policy that contains that string.
+ *
+ * @param item Result item upon which the event occurred.
+ * @param top Toplevel containing policy sources.
+ * @param container Containing GTK widget within which the result item
+ * is being displayed.
+ * @param event GdkEvent that gives the button used to click on the
+ * inlink link, or NULL if the event was generated by hitting the Menu
+ * button.
+ * @param form Form upon which the event occurred.
+ * @param line_num Line number of the text buffer where the clicked occurred.
+ * @param s The string that was clicked.
+ */
+void result_item_inline_link_event(result_item_t * item, toplevel_t * top, GtkWidget * container, GdkEventButton * event,
+				   poldiff_form_e form, int line_num, const char *s);
+
 /* these next three functions exist because C has no concept of
  * 'friend' like in C++; result_item_render needs access to three
  * fields within the result_item. */
